<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>top.flowerstardream.hcd</groupId>
        <artifactId>trainSeat-parent</artifactId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <artifactId>trainSeat-biz</artifactId>
    <version>${revision}</version>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <name>trainSeat-biz</name>
    <description>列车资源调配模块 - 存放业务逻辑代码</description>
    <dependencies>
        <dependency>
            <groupId>top.flowerstardream.hcd</groupId>
            <artifactId>trainSeat-ao</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>top.flowerstardream.hcd</groupId>
            <artifactId>trainSeat-bo</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>top.flowerstardream.hcd</groupId>
            <artifactId>trainSeat-constant</artifactId>
        </dependency>
        <dependency>
            <groupId>top.flowerstardream.hcd</groupId>
            <artifactId>hcd-tools</artifactId>
        </dependency>

        <!-- Common Dependencies -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
        </dependency>
        <dependency>
            <groupId>top.flowerstardream.hcd</groupId>
            <artifactId>trainSeat-ao</artifactId>
        </dependency>
        <dependency>
            <groupId>top.flowerstardream.hcd</groupId>
            <artifactId>trainSeat-ao</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>